# DrResult

./: .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pytest-coverage.yml
docs/: requirements.txt
docs/source/: conf.py  drresult.rst  index.rst
drresult/: __init__.py  class_decorators.py  function_decorators.py  gather_result.py  logging.py  option.py  result.py
test/: test_constructs_as_result.py  test_gather_result.py  test_option.py  test_result.py  test_traceback.py
